# fastagents

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/fastagents/: hello.py
src/fastagents/envs/: __init__.py  _types.py  bash_tool.py
tests/unit/: test_bash_tool.py
